force-app/main/default/objects/InspectionHistory__c/InspectionHistory__c.object-meta.xml
<CustomObject>
    <label>점검내역</label>
    <nameField>
        <displayFormat>IH-{0000}</displayFormat>
        <label>점검내역 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>