force-app/main/default/objects/InspectionHistory__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>환자</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>점검내역</relationshipLabel>
    <relationshipName>InspectionHistories</relationshipName>
    <type>Lookup</type>
</CustomField>