force-app/main/default/objects/InspectionHistory__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>기기</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>점검내역</relationshipLabel>
    <relationshipName>InspectionHistories</relationshipName>
    <type>Lookup</type>
</CustomField>