force-app/main/default/objects/InspectionHistory__c/fields/InspectionDate__c.field-meta.xml
<CustomField>
    <fullName>InspectionDate__c</fullName>
    <label>점검일</label>
    <type>Date</type>
</CustomField>