force-app/main/default/objects/InspectionHistory__c/fields/InspectionResult__c.field-meta.xml
<CustomField>
    <fullName>InspectionResult__c</fullName>
    <label>점검결과</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>