force-app/main/default/objects/InspectionHistory__c/fields/InspectionType__c.field-meta.xml
<CustomField>
    <fullName>InspectionType__c</fullName>
    <label>점검유형</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>정기점검</fullName>
            </value>
            <value>
                <fullName>긴급점검</fullName>
            </value>
            <value>
                <fullName>방문점검</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>