force-app/main/default/objects/InspectionHistory__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <label>점검자</label>
    <length>100</length>
    <type>Text</type>
</CustomField>